manifest/nginx-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: portfolio-web
# 이 Pod의 이름을 'nginx-deployment'로 설정하며, 'app: portfolio-web'라는 레이블을 부여합니다.
# 레이블은 나중에 서비스가 이 Pod를 선택할 때 사용됩니다.
spec:
  replicas: 2 # 기본값 (덮어쓰기 가능)
  selector:
    matchLabels:
      app: portfolio-web
      tier: web
  template:
    metadata:
      labels:
        app: portfolio-web
        tier: web
    spec:
      containers:
        - image: junwoo5914/portfolio:web-develop
          name: nginx-deployment
          imagePullPolicy: Always # 항상 이미지를 다시 pull
          ports:
            - containerPort: 80 # client-main 컨테이너가 리스닝하는 포트를 80으로 설정
              name: web
          resources:
            requests:
              memory: "125Mi" # 최소 메모리 요청
              cpu: "250m" # 최소 CPU 요청
            limits:
              memory: "500Mi" # 최대 메모리 제한
              cpu: "500m" # 최대 CPU 제한
      imagePullSecrets:
        - name: docker-containers # 고정된 시크릿 이름
