manifest/nginx-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    app: portfolio-web
# 이 서비스는 'nginx-service'라는 이름으로 정의되며, 'app: portfolio-web'라는 레이블을 부여받습니다.

spec:
  ports:
    - protocol: TCP
      port: 80 # 클러스터 내에서 외부로 노출할 포트
      # targetPort: 80 # 컨테이너의 80번 포트로 트래픽 전달
    # dockefFile이 nginx로 서빙하는 것까지 포함하기 때문에 80포트로 listen 중임
    # 자세한 내용은 app repository에 있는 nginx.conf 파일 확인

  selector:
    app: portfolio-web
    tier: web
  # 'app: portfolio-web'와 'tier: web'라는 레이블을 가진 Pod를 찾아서 이 서비스와 연결합니다.

  type: ClusterIP
